--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -45,8 +45,8 @@
     box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.2);
 }
 .content-container{
-  padding: 1%;
   margin-top: 2%;
+  padding-bottom: 2%;
 }
 .content-col{
   background: rgba(245, 242, 242, 0.541);
@@ -154,6 +154,9 @@ a{
     .card:hover{
       transform: none;
     }
+    .content-col{
+      padding: 5%;
+    }
   }
   
   @media (min-width: 769px) and (max-width: 991px) {
@@ -169,6 +172,7 @@ a{
     .card:hover{
       transform: none;
     }
+    
     
   }
   
